[package]
name = "the_iron_guard"
version = "0.1.0"
edition = "2025"

[dependencies]
clap = { version = "3.0", features = ["derive"] } # CLI parsing
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON handling
ring = "0.16" # Encryption
argon2 = "0.3" # Password hashing
base64 = "0.13" # Encoding encrypted data
rpassword = "5.0" # Secure password input
